--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-astroid==3.2.2
+astroid==2.10.6
+async-generator==1.10
 attrs==21.4.0
 blinker==1.4
 certifi==2021.10.8
@@ -9,14 +10,18 @@ idna==3.3
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
-numpy==1.21.4
-pandas==1.3.4
-PySocks==1.7.1
-python-dateutil==2.8.2
+numpy==1.21.1
+pandas==1.5.1
 requests==2.26.0
 selenium==4.0.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+tomli==1.2.2
+tomlkit==0.7.2
 trio==0.19.0
 trio-websocket==0.9.2
+typing-extensions==3.10.0.2
 urllib3==1.26.7
 Werkzeug==2.0.2
+wrapt==1.12.1
